# training_gui

./: .gitignore  ARCHITECTURE.md  BACKEND_API_NOTES.md  BUILD.md  CLASSIFIER_GUIDED_IMPLEMENTATION.md  CLAUDE.md  CONCURRENT_TASKS_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  QUICKSTART_SERVER.md  README-dist.md  README.md  README_NICEGUI.md  REVIEW_ONLY_APP.md  TEST_INSTRUCTIONS.md  app.py  build-minimal.js  design.md  package-lock.json  package.json  plan.md  requirements-dist.txt  requirements-nicegui.txt  server_config.example.yml  server_config.yml  temp.py  test_audio_utils.py  test_clips.py  test_nicegui.py  test_review_rendering.py
backend/: build_pyinstaller.py  dipper_pytorch_env.yml  http_server.spec  http_server_simple.spec  inference.spec  inference_config.json  lightweight_server.py  lightweight_server.spec  minimal_server.py  minimal_server.spec  pytorch_env_requirements.yml  requirements-lightweight.txt  requirements-pyinstaller.txt  requirements.txt  test_pyinstaller.py  test_pyinstaller.spec  test_spec.py
configs/: inference_config.json
frontend/: .gitignore  BUILD_INSTRUCTIONS.md  build-dist.js  build-mac.sh  electron-builder-review.json  fix-http-server.js  fix-permissions.js  package-lock.json  package.json  test-python-env.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
nicegui_documentation/: ui.audio.txt  ui.interactive_image.txt
scripts/: install-server.sh  launch-server-dev.sh  launch-server.sh
tabs/: __init__.py  audio_utils.py  explore_tab.py  (+6 more)
(+67 files in other folders)
